# big-brain

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-PARITY.md  LICENSE.md  README.md  README.tpl  cliff.toml  justfile
.cargo/: config.toml
.github/: README.md  README.tpl
.github/workflows/: ci.yml
assets/: LICENSE_ASSETS
assets/models/: town.glb
big-brain-derive/: Cargo.toml
big-brain-derive/src/: action.rs  consideration.rs  lib.rs  scorer.rs
derive/: Cargo.toml
derive/src/: action.rs  lib.rs  scorer.rs
examples/: basic.ron  concurrent.rs  custom_measure.rs  dorfs.rs  farming_sim.rs  one_off.rs  sequence.rs  thirst.rs
examples/dorf_hero/: Cargo.toml  LICENSE
examples/dorf_hero/src/: lib.rs  main.rs  util.rs
examples/dorf_hero/src/ai/: mod.rs
examples/dorf_hero/src/ai/actions/: chase.rs  meander.rs  mod.rs
examples/dorf_hero/src/ai/scorers/: enemy_distance.rs  fear_of_death.rs  mod.rs
examples/dorf_hero/src/components/: evil_dorf.rs  hero.rs  hp.rs  mod.rs  player.rs  position.rs  render.rs
examples/dorf_hero/src/resources/: game_state.rs  mod.rs  tile_sprite_handles.rs
examples/dorf_hero/src/systems/: camera_follow_hero.rs  mod.rs
src/: actions.rs  choices.rs  considerations.rs  evaluators.rs  lib.rs  measures.rs  pickers.rs  scorers.rs  stopwatch.rs  thinker.rs
src/_tutorial/: chapter_0.rs  chapter_1.rs  mod.rs
tests/: derive_action.rs  derive_scorer.rs  steps.rs
