[package]
name = "big-brain"
version = "0.16.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Rusty Utility AI library"
license = "Apache-2.0"
readme = "README.md"
keywords = ["utility-ai", "bevy", "ai", "ecs"]
categories = ["game-development"]
repository = "https://github.com/zkat/big-brain"
homepage = "https://github.com/zkat/big-brain"

[workspace]

[dependencies]
bevy = { version = "0.10", default-features = false }
big-brain-derive = { version = "=0.16.0", path = "./derive" }

[dev-dependencies]
bevy = { version = "0.10", default-features = true }
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
trace = []
