[package]
name = "big-brain-derive"
version = "0.2.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"
keywords = ["utility-ai", "ai", "bevy", "ecs"]
categories = ["game-development"]
description = "Derive macros for the big-brain Utility AI library"
license-file = "../LICENSE.md"
repository = "https://github.com/zkat/big-brain"
homepage = "https://github.com/zkat/big-brain"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.33"
quote = "1.0.7"
proc-macro2 = "1.0.18"
darling = "0.10.2"
